--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
 }
 
 :root {
@@ -15,9 +14,12 @@
 
 body {
   font-family: "Inter", sans-serif;
+  font-size: 14px;
   background-color: var(--off-black);
   color: white;
   display: flex;
+  flex-direction: column;
+  grid-template-rows: auto 1 fr auto;
   align-items: center;
   justify-content: center;
   min-height: 100vh;
@@ -27,27 +29,34 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  border-radius: 15px;
+  border-radius: 12px;
   background-color: var(--dark-grey);
-  padding: 2rem;
+  padding: 1.5rem;
+  max-width: 350px;
+  width: 100%;
 }
 
 img {
   border-radius: 100%;
-  max-width: 100px;
+  max-width: 90px;
+  margin-top: 0.5rem;
+  margin-bottom: 1.7rem;
 }
 
-h1 {
+#name {
   font-weight: 600;
+  margin-bottom: 0.75rem;
 }
 
-h3 {
+#location {
   font-weight: 600;
   color: var(--primary-color);
+  margin-bottom: 2.5rem;
 }
 
-p {
+#bio {
   font-weight: 400;
+  margin-bottom: 1.25rem;
 }
 
 ul {
@@ -59,13 +68,13 @@ ul li {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 0.5rem;
+  margin: 0.75rem 0.5rem;
 }
 
 ul li button {
   background-color: var(--grey);
   border: none;
-  padding: 0.5rem 1rem;
+  padding: 1rem;
   border-radius: 5px;
   color: white;
   font-weight: 600;
@@ -79,8 +88,9 @@ ul li button:hover {
 }
 
 footer {
+  left: 0;
   bottom: 0;
-  position: absolute;
+  position: static;
   text-align: center;
   width: 100%;
   font-size: 10px;
